--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,12 @@ body {
 }
 
 .juego {
+    background-image: url("../img/");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     display: flex;
     width: 1155px;
     height: 775px;
-    border: 2px solid blue;
 }
 
 .game {
@@ -83,5 +85,26 @@ body {
     margin: 0% 5% 10% 20%;
     font-size: 40px;
     font-weight: bold;
+    border: 1px solid black;
+}
+
+#combo {
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0% 5% 10% 20%;
+    font-size: 40px;
+    font-weight: bold;
+    border: 1px solid black;
+}
+#level {
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0% 5% 10% 20%;
     border: 1px solid black;
 }
