--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 .juego {
-    background-image: url("../img/");
+    background-image: url("../img/Guitarra.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
@@ -32,7 +32,6 @@ body {
     align-items: flex-end;
     width: 900px;
     height: 775px;
-    border: 2px solid yellow;
 }
 
 .botn {
@@ -43,6 +42,9 @@ body {
 }
 
 .gif {
+    background-image: url("../img/24_thunder-gif-transparent_gif-lightning-transparent-effects-animated-gif-on-gifer-by-analas.gif");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     width: 15%;
     height: 100%;
 }
