--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 body {
     min-height: 100%;
     min-width: 99%;
+    background-color: black;
 }
 
 .main {
     display: flex;
     height: 775px;
     width: 1540px;
-    border: 2px solid black;
 }
 
 .puntuaje {
@@ -15,7 +15,6 @@ body {
     flex-direction: column;
     width: 385px;
     height: 775px;
-    border: 2px solid red;
 }
 
 .juego {
@@ -26,7 +25,37 @@ body {
     width: 1155px;
     height: 775px;
 }
+.menu{
+    position: relative;
+    display: flex;
+    background-image: url("../img/fondomenu.png");
+    background-repeat: no-repeat;
+    background-size: 100% 1100px;
+}
 
+.border {
+    background-image: url("../img/pinchosHorizontal.png");
+    background-size: 100%;
+    height: 100%;
+    width: 15%;
+}
+.border2 {
+    background-image: url("../img/pinchosVertical.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    height: 5%;
+    width: 100%;
+}
+.border3 {
+    background-image: url("../img/pinchosVertical.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    top: 730px;
+    height: 6%;
+    width: 100%;
+}
 .game {
     display: flex;
     align-items: flex-end;
@@ -39,10 +68,11 @@ body {
     width: 135px;
     height: 130px;
     border: 2px solid black;
+    
 }
 
 .gif {
-    background-image: url("../img/24_thunder-gif-transparent_gif-lightning-transparent-effects-animated-gif-on-gifer-by-analas.gif");
+    background-image: url("../img/relampagos.gif");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 15%;
@@ -88,6 +118,7 @@ body {
     font-size: 40px;
     font-weight: bold;
     border: 1px solid black;
+    border-radius: 100%;
 }
 
 #combo {
