--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
 }
 
 .juego {
+    position: relative;
     background-image: url("../img/Guitarra.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -28,7 +29,7 @@ body {
 .menu{
     position: relative;
     display: flex;
-    background-image: url("../img/marcoFloral2.jpg");
+    background-image: url("../img/maderasfloresTEST.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -57,6 +58,7 @@ body {
     width: 100%;
 }
 .game {
+    position: relative;
     display: flex;
     align-items: flex-end;
     width: 900px;
@@ -67,8 +69,29 @@ body {
     margin: 0% 5% 9% 5%;
     width: 135px;
     height: 130px;
-    border: 2px solid black;
-    
+}
+#left{
+    background-image: url("../img/Left.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#up{
+    background-image: url("../img/Up.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#down{
+    background-image: url("../img/Down.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#right{
+    background-image: url("../img/Right.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .gif {
@@ -84,7 +107,9 @@ body {
     top: 10px;
     height: 70px;
     width: 70px;
-    background-color: green;
+    background-image: url("../img/note.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .pruebacss {
@@ -102,7 +127,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 40% 20% 0% 20%;
+    margin: 150px 0px 0px 70px;
     font-size: 40px;
     font-weight: bold;
     background-image: url("../img/marco2.jpg");
@@ -132,7 +157,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10% 20% 0% 20%;
+    margin: 85px 0px 0px 70px;
     font-size: 40px;
     font-weight: bold;
     background-image: url("../img/marco2.jpg");
@@ -142,10 +167,33 @@ body {
 
 #level {
     width: 200px;
-    height: 50px;
+    height: 100px;
+    background-image: url('../img/marco3.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0% 5% 10% 20%;
-    border: 1px solid black;
+}
+
+#level:hover{
+    background-image: url('../img/marco2-hover.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#level:active{
+    background-image: url('../img/marco2-active.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.start{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-image: url("../img/startgame.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    display: block;
 }
