--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ body {
     background: none;
 }
 
-.windowGameover{
+#windowGameover{
     position: absolute;
     z-index: 1;
     height: 100%;
@@ -218,7 +218,7 @@ body {
     display: none;
 }
 
-.windowGamewin{
+#windowGamewin{
     position: absolute;
     z-index: 1;
     height: 100%;
@@ -268,10 +268,16 @@ body {
 }
 
 .maxpoint>span{
+    font-family: 'Courier New', Courier, monospace;
+    padding: 11px;
+    font-size: 50px;
     color: rgb(255, 255, 255);
 }
 
 .maxcombo>span{
+    font-family: 'Courier New', Courier, monospace;
+    padding: 11px;
+    font-size: 50px;
     color: rgb(255, 255, 255);
 }
 
